<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".reset.ResetPasswordFragment">

    <TextView
        android:id="@+id/text_info_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top_info"
        android:layout_marginEnd="@dimen/margin_top_info"
        android:text="@string/forgot_tile"
        android:textAppearance="?attr/textAppearanceHeadline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_info_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top_info"
        android:layout_marginEnd="@dimen/margin_top_info"
        android:text="@string/forgot_desc"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_info_title" />

    <ImageView
        android:id="@+id/image_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/img_forgot"
        app:layout_constraintBottom_toTopOf="@id/view_overlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_info_desc" />

    <View
        android:id="@+id/view_overlay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/overlay_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/top_space" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        style="@style/Locate.Button.Text.Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:minHeight="0dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_existing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_existing_user"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintBottom_toTopOf="@id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_reset"
        style="@style/Locate.Button.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button"
        android:layout_marginEnd="@dimen/margin_button"
        android:layout_marginBottom="57dp"
        android:text="@string/reset_password"
        app:layout_constraintBottom_toTopOf="@id/text_existing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_input_onboarding"
        android:layout_marginStart="@dimen/margin_textfield"
        android:layout_marginEnd="@dimen/margin_textfield"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@id/button_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            tools:text="asdemail@com.com" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/Locate.Text.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_label"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@id/input_layout_email"
        app:layout_constraintStart_toStartOf="@id/input_layout_email" />

    <Space
        android:id="@+id/top_space"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        app:layout_constraintBottom_toTopOf="@id/input_layout_email" />


</androidx.constraintlayout.widget.ConstraintLayout>