<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/login_scene"
    tools:context=".login.LoginFragment">

    <ImageView
        android:id="@+id/image_ic_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_input_vertical"
        android:contentDescription="@null"
        android:src="@drawable/ic_locate_top"
        app:layout_constraintBottom_toTopOf="@id/text_info_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_service_info"
            android:textAppearance="?attr/textAppearanceHeadline1"
            app:layout_constraintBottom_toTopOf="@id/text_info_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_ic_top" />

        <TextView
            android:id="@+id/text_info_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_service_desc"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_info_title" />

        <ImageView
            android:id="@+id/image_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_input_vertical"
            android:src="@drawable/img_login_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_info_desc" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/overlay_main"
            android:paddingBottom="@dimen/margin_input_vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_input_onboarding"
                android:layout_marginStart="@dimen/margin_textfield"
                android:layout_marginTop="71dp"
                android:layout_marginEnd="@dimen/margin_textfield"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    tools:text="asdemail@com.com" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/Locate.Text.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_label"
                android:text="@string/email"
                app:layout_constraintBottom_toTopOf="@id/input_layout_email"
                app:layout_constraintStart_toStartOf="@id/input_layout_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_input_onboarding"
                android:layout_marginStart="@dimen/margin_textfield"
                android:layout_marginTop="@dimen/margin_input_vertical"
                android:layout_marginEnd="@dimen/margin_textfield"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/Locate.Text.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_label"
                android:text="@string/password"
                app:layout_constraintBottom_toTopOf="@id/input_layout_password"
                app:layout_constraintStart_toStartOf="@id/input_layout_email" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login"
                style="@style/Locate.Button.Primary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_button"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="@dimen/margin_button"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_forgot"
                style="@style/Locate.Button.Text.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="@string/login_forgot_password"
                app:rippleColor="@color/orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_login" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_register"
                style="@style/Locate.Button.Secondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_button"
                android:layout_marginTop="78dp"
                android:layout_marginEnd="@dimen/margin_button"
                android:layout_marginBottom="50dp"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    <ScrollView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:overScrollMode="never"-->
    <!--        android:background="@drawable/overlay_main"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/image_group">-->

    <!--        -->

    <!--    </ScrollView>-->

    <!--    <View-->
    <!--        android:id="@+id/view_overlay"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:background="@drawable/overlay_main"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="@id/top_space" />-->


    <!--    <Space-->
    <!--        android:id="@+id/top_space"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="71dp"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/input_layout_email" />-->


</androidx.constraintlayout.motion.widget.MotionLayout>