<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    app:layoutDescription="@xml/register_scene"
    tools:context=".register.RegisterFragment">

    <TextView
        android:id="@+id/text_info_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top_info"
        android:layout_marginEnd="@dimen/margin_top_info"
        android:text="@string/register_title"
        android:textAppearance="?attr/textAppearanceHeadline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_info_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top_info"
        android:layout_marginEnd="@dimen/margin_top_info"
        android:text="@string/register_desc"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_info_title" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_info_desc">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/overlay_main"
            android:paddingBottom="@dimen/margin_register_bottom">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_name"
                style="@style/Locate.TextInput"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_input_onboarding"
                android:layout_marginStart="@dimen/margin_textfield"
                android:layout_marginTop="71dp"
                android:layout_marginEnd="@dimen/margin_textfield"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColor="@color/white"
                    tools:text="John" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/Locate.Text.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_label"
                android:text="@string/register_name"
                app:layout_constraintBottom_toTopOf="@id/input_layout_name"
                app:layout_constraintStart_toStartOf="@id/input_layout_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_input_onboarding"
                android:layout_marginStart="@dimen/margin_textfield"
                android:layout_marginTop="@dimen/margin_input_vertical"
                android:layout_marginEnd="@dimen/margin_textfield"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    tools:text="asdemail@com.com" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/Locate.Text.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_label"
                android:text="@string/email"
                app:layout_constraintBottom_toTopOf="@id/input_layout_email"
                app:layout_constraintStart_toStartOf="@id/input_layout_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_input_onboarding"
                android:layout_marginStart="@dimen/margin_textfield"
                android:layout_marginTop="@dimen/margin_input_vertical"
                android:layout_marginEnd="@dimen/margin_textfield"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />


            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                style="@style/Locate.Text.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_label"
                android:text="@string/password"
                app:layout_constraintBottom_toTopOf="@id/input_layout_password"
                app:layout_constraintStart_toStartOf="@id/input_layout_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password_confirm"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_input_onboarding"
                android:layout_marginStart="@dimen/margin_textfield"
                android:layout_marginTop="@dimen/margin_input_vertical"
                android:layout_marginEnd="@dimen/margin_textfield"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/Locate.Text.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_label"
                android:text="@string/register_password_congirm"
                app:layout_constraintBottom_toTopOf="@id/input_layout_password_confirm"
                app:layout_constraintStart_toStartOf="@id/input_layout_email" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_register"
                style="@style/Locate.Button.Secondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_button"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="@dimen/margin_button"
                android:layout_marginBottom="@dimen/margin_button"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout_password_confirm" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.motion.widget.MotionLayout>